// Copyright 2019 The GraphicsFuzz Project Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gfauto;

import "gfauto/common.proto";
import "gfauto/device.proto";

message Test {
  oneof test {
    TestGlsl glsl = 1;
  }
  string crash_signature = 2;
  Device device = 3;
  repeated Binary binaries = 4;
}

message TestGlsl {
  repeated string spirv_opt_args = 1;
}
